--- a/src/main/java/telas/OrcamentoTela.form
+++ b/src/main/java/telas/OrcamentoTela.form
@@ -58,9 +58,9 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="jLabel3" min="-2" pref="64" max="-2" attributes="0"/>
                                       <Group type="102" attributes="0">
-                                          <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                                          <Component id="TxtData" min="-2" pref="139" max="-2" attributes="0"/>
+                                          <Component id="jLabel2" min="-2" pref="40" max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                                          <Component id="TxtValor" min="-2" pref="139" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -91,7 +91,7 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="TxtData" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="TxtValor" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
@@ -125,10 +125,10 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Data"/>
+            <Property name="text" type="java.lang.String" value="Valor"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="TxtData">
+        <Component class="javax.swing.JTextField" name="TxtValor">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
